# roe

./: .gitignore  CLAUDE.md  Cargo.toml  Manifest.toml  Project.toml  README.md  rune.txt
jl/: buffer_api.jl  buffer_switcher.jl  commands.jl  file_selector.jl  julia_highlighting.jl  keybindings.jl  major_modes.jl  markdown_mode.jl  modes.jl  roe.jl  rust_highlighting.jl  syntax.jl
roe/: Cargo.toml
roe-core/: Cargo.toml
roe-core/src/: buffer.rs  buffer_host.rs  buffer_switch_mode.rs  command_mode.rs  command_registry.rs  editor.rs  file_selector_mode.rs  file_watcher.rs  gutter.rs  isearch_mode.rs  julia_runtime.rs  keys.rs  kill_ring.rs  lib.rs  mode.rs  renderer.rs  scripted_mode.rs  selection_menu.rs  syntax.rs  undo.rs  window.rs
roe-terminal/: Cargo.toml
roe-terminal/src/: lib.rs  terminal_renderer.rs
roe-vello/: Cargo.toml
roe-vello/src/: key_translate.rs  lib.rs  renderer.rs  text.rs  theme.rs
roe/src/: main.rs
rol/: Cargo.toml
rol/src/: ast.rs  bench.rs  bytecode.rs  compiler.rs  environment.rs  fib_bench.rs  gc.rs  heap.rs  integration_tests.rs  jit.rs  lexer.rs  main.rs  mmtk_binding.rs  parser.rs  protocol.rs  repl.rs  symbol.rs  var.rs
scripts/: run-vello.sh  run.sh  setup-julia.sh
src/: buffer.rs  buffer_host.rs  buffer_switch_mode.rs  command_mode.rs  command_registry.rs  editor.rs  file_selector_mode.rs  keys.rs  kill_ring.rs  main.rs  mode.rs  renderer.rs  terminal_renderer.rs  window.rs
