[package]
name = "roe"
version = "0.1.0"
edition = "2021"
description = "Ryan's Own Emacs - A minimalistic editor with emacs keybindings"

[dependencies]
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
ropey = "1.6"
slotmap = "1.0"
tokio = { version = "1.0", features = ["full"] }
