[workspace]
members = [
    "roe",
    "roe-core",
    "roe-terminal",
]
resolver = "2"

[workspace.dependencies]
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
ropey = "1.6"
slotmap = "1.0"
tokio = { version = "1.0", features = ["full"] }
jlrs = { version = "0.21" , features = ["julia-1-11", "tokio-rt"]}