[workspace]
members = [
    "roe",
    "roe-core",
    "roe-terminal",
    "roe-vello",
]
resolver = "2"

[workspace.dependencies]
arboard = "3.6"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
jlrs = { version = "0.22", features = ["tokio-rt"] }
notify = "8.0"
ropey = "1.6"
similar = "2.7"
slotmap = "1.0"
tokio = { version = "1.0", features = ["full"] }
