[package]
name = "roe-vello"
version = "0.1.0"
edition = "2021"
description = "Vello/GPU rendering for Roe (Ryan's Own Emacs)"

[[bin]]
name = "roe-vello"
path = "src/bin/roe-vello.rs"

[dependencies]
# Core roe
roe-core = { path = "../roe-core" }

# Rendering
vello = "0.6"
# Note: wgpu version must match what vello uses.

# Windowing
winit = "0.30"

# Text
parley = "0.7"

# Async
pollster = "0.4"
tokio = { workspace = true }

# Utilities
jlrs = { workspace = true }
slotmap = { workspace = true }
