[package]
name = "roe"
version = "0.1.0"
edition = "2021"
description = "Ryan's Own Emacs - A minimalistic editor with emacs keybindings"

[[bin]]
name = "roe"
path = "src/main.rs"

[dependencies]
crossterm = { workspace = true }
roe-core = { path = "../roe-core" }
roe-terminal = { path = "../roe-terminal" }
slotmap = { workspace = true }
tokio = { workspace = true }
jlrs = { workspace = true }