[package]
name = "rol"
version = "0.1.0"
edition = "2024"

[dependencies]
boxcar = "0.2"
papaya = "0.2"
ahash = "0.8"
once_cell = "1.21"
rustyline = "14.0"
paste = "1.0"

# Cranelift JIT dependencies
cranelift = "0.108"
cranelift-jit = "0.108"
cranelift-module = "0.108"
cranelift-native = "0.108"

[[bin]]
name = "fib_bench"
path = "src/fib_bench.rs"

